# flink-studies

./: .gitconfig  .gitignore  404.html  AGENTS.md  Flink-Diagrams.pptx  README.md  TASKS.md  architecture.html  cep.html  checklist.md  consumeTelemetries.sh  docker-compose.yaml  extra.css  firstapp.html  fitforpurpose.html  gitignore  index.html  k8s-deploy.html  kafka-flink-compose.yaml  kafka.html  mkdocs.yml  out.csv  pom.xml  programming.html  pyproject.toml  requirements.txt  sitemap.xml  start_local.sh  stateful-func.html
assistants/jump_start_demo/agent/: main.py  pyproject.toml
assistants/jump_start_demo/tools/: cli.py  pyproject.toml
assistants/km-agno/: .gitignore  README.md  pyproject.toml
assistants/km-agno/km_agno/: __init__.py  agent_factory.py  cli.py  config.py  content_processor.py  ignore_rules.py  vector_store.py
assistants/km-agno/tests/: test_loading_src.py
code/dbt/: README.md  main.py  pyproject.toml
code/dbt/airbnb/: .gitignore  .user.yml  README.md  dbt_project.yml  dev.duckdb
code/dbt/airbnb_streaming/: Makefile  dbt_project.yml
code/dbt/flink_workshop/: Makefile  README.md  dbt_project.yml  teardown_manifest.json
code/flink-sql/: README.md  common.mk  package-lock.json  pyproject.toml
code/flink-sql/00-basic-sql/: Makefile  README.md  cc_flink_employees_demo.py  cp_flink_kafka_employees_demo.py  start_flink_oss.sh
code/flink-sql/01-confluent-kafka-local-flink/: README.md
code/flink-sql/01-kafka-flink/: README.md
code/flink-sql/03-nested-row/: README.md  dml.nested_user.sql  vw.array_of_rows.sql  vw.nested_user.sql
code/flink-sql/04-2-joins/: readme.md
code/flink-sql/04-2-self-joins/: README.md
code/flink-sql/04-joins/: Makefile  docker-compose.yaml  readme.md
code/flink-sql/05-append-log/: README.md  ctas.enriched_orders.sql  ctas.user-order-quantity-retract.sql  ctas.user-order-quantity-upsert.sql  ddl.orders-append-mode.sql  ddl.orders-upsert-mode.sql  dml.insert-basic-orders.sql
code/flink-sql/05-changelog/: Makefile  README.md  dml.insert-basic-orders.sql  dml.insert-products.sql
code/flink-sql/06-groupby-over/: Makefile  README.md
code/flink-sql/06-puzzles/: highest_tx_per_day.sql  readme.md  second_highes_salary.sql
code/flink-sql/07-1-multiple-event-types/: README.md
code/flink-sql/07-2-raw-to-multiple-types/: README.md
code/flink-sql/07-schema-refactoring/: alter_product.sql  pd_discounts.sql  ps_products_v1.sql  readme.md
code/flink-sql/08-snapshot-external-query/: connect_rds.py  readme.md
code/flink-sql/08-snapshot-query/: readme.md
code/flink-sql/09-temporal-joins/: README.md  ddl.currency_rates.sql  ddl.orders.sql  ddl.orders_with_curr_rate.sql  dml.temp_join.sql  insert_curr_rates_1.sql  insert_orders.sql
code/flink-sql/10-puzzles/: create_loans_table.sql  create_tx_table.sql  flink_sql_client.yaml  readme.md
code/flink-sql/10-windowing/: README.md
code/flink-sql/11-puzzles/: hostpath-pv.yaml  hostpath-pvc.yaml  readme.md
code/flink-sql/12-ai-agents/: README.md  REPLAY.md
code/flink-sql/13-materialized-table/: README.md  config.yaml  rides_producer.py  setup.sh
code/flink-sql/14-rehydration/: README.md
code/flink-sql/cm_py_lib/: kafka_avro_producer.py  kafka_json_producer.py
code/flink-sql/data/: orders.csv
code/flink-sql/flink-python-sql-runner/: Dockerfile
code/flink-sql/tmp/: error_handling_best_practices.md
code/flink-sql/tools/: Makefile  README.md  __init__.py  cc_flink_deploy.py  cc_flink_rest_client.py  cp_flink_rest_client.py  cp_flink_utils.py  deploy_flink_statements.py  drop_tables_manifest.json  flink_wide_table.sql  gen_flink_wide_table.py  migrate_dml_to_dbt.py  pyproject.toml  run_snapshot_query.py  run_streaming_query.py
code/flink-sql/triage/: ddl.employees.sql
e2e-demos/cc-cdc-tx-demo/tx_scoring/: .dockerignore  Dockerfile  README.md  deploy.sh  main.py  pyproject.toml
e2e-demos/cdc-tableapi-to-silver/cccloud/: README.md  cc_clean_all.py  cc_deploy_raw_data.py  cc_run_validate_tests.py  pyproject.toml
e2e-demos/external-lookup/database/: 01_create_schema.sql  02_insert_data.sql  Dockerfile  Makefile  README.md  build-image.sh  build.sh  claimdb_api.py  duckdb_api.py  pyproject.toml
e2e-demos/external-lookup/event-generator/: Dockerfile  Makefile  README.md  build-image.sh  docker-entrypoint.sh  env.example  generate_standalone_schemas.py  pyproject.toml  test_local.py
e2e-demos/flink-to-feast/: Dockerfile  Dockerfile.model-serving  README.md  main.py  pyproject.toml
e2e-demos/flink-to-feast/cccloud/: README.md
e2e-demos/flink-to-feast/feature_repo/: data_view.ipynb  feature_definitions.py  feature_store.yaml  test_workflow.py
e2e-demos/flink-to-feast/k8s/: configmap.yaml  deployment.yaml  model-serving-configmap.yaml  model-serving-deployment.yaml  model-serving-service.yaml  secret.yaml.example  service.yaml
e2e-demos/flink-to-feast/kafka_consumer/: README.md  __init__.py  config.py  consumer.py  feast_client.py  health.py  main.py  utils.py
e2e-demos/flink-to-feast/model_serving/: README.md  __init__.py  app.py  (+6 more)
e2e-demos/flink-watermark/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
e2e-demos/json-transformation/: ContractTable.sql  JSON_VALIDATOR_README.md  KAFKA_PRODUCER_README.md  Makefile  OrderDetails.sql  PRODUCER_API_README.md  README.md  README_OrderDetails_Mapping.md  checklist.md  ddl.order_simple.sql  delete_statements.sh  dml.insert_order_simple.sql  enriched_order_detail.json  example_usage.py  flink_orderdetails_flattened.sql  flink_orderdetails_statement.sql  flink_transform_raw_orders.sql  flink_transform_raw_orders_corrected.sql  input_1.json  input_1_schema.json  kafka_json_producer.py  main.py  moving_help.json  order_details.json  pyproject.toml  requirements_kafka.txt  validate_json_schema.py
tools/: .coverage  README.md  extract_sql_from_avro.py  flink_researcher.py  pyproject.toml  pytest.ini  run_tests.sh  test_taipy_ui.py
tools/config/: tendance-example.yaml
tools/data/: flink_researcher.db
tools/examples/: README.md  so_client_demo.py  taipy_ui_demo.md
(+2232 files in other folders)
