[project]
name = "flink-studies"
version = "0.1.0"
description = "Project to manage knowledge about Flink"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-flink==1.20.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.10",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocstrings>=0.29.0",
    "pyflink>=1.0",
]

[tool.uv.workspace]
members = [
    "e2e-demos/cdc-demo/src",
]
