[project]
name = "tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.6.9",
    "chromadb>=1.5.9",
    "ddgs>=9.14.4",
    "ollama>=0.4.0",
    "openai>=2.38.0",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.50",
]
