[project]
name = "dbt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
     "dagster-dbt>=0.28.14",
     "dagster-webserver>=1.12.14",
     "dbt-autofix>=0.20.0",
     "dbt-confluent>=0.2.1",
     "dbt-core>=1.11.12",
     "dbt-duckdb>=1.10.1",
     "dbt-snowflake>=1.11.2",
]
