[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flink-sql"
version = "0.1.0"
description = "Most of those projects will use python to validate the demonstration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka>=2.0",
    "psycopg2>=2.9.11",
    "python-dotenv>=1.0",
    "requests>=2.28",
]

[tool.hatch.build.targets.wheel]
packages = ["tools"]
