[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flink-sql"
version = "0.1.0"
description = "Most of those projects will use python to validate the demonstration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka[schema-registry]>=2.3.0",
    "dbt-confluent>=0.2.1",
    "psycopg2>=2.9.11",
    "python-dotenv>=1.0",
    "requests>=2.28",
    "authlib>=1.6.5",
    "cachetools>=6.2.1",
        "jsonschema>=4.25.1",
    "orjson>=3.11.3",
    "pydantic>=2.12.2",
]

[tool.hatch.build.targets.wheel]
packages = ["tools"]
