[project]
name = "flink-to-feast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feast>=0.59.0",
    "confluent-kafka[avro,schema-registry]>=2.3.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
]
