[project]
name = "flink-watermark-research"
version = "0.1.0"
description = "Kafka producer for the flink_watermark idle-partition / watermark demo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "confluent-kafka>=2.3.0",
]

[project.scripts]
flink-wm-produce = "flink_watermark.produce:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
