[project]
name = "jump-start-agent"
version = "0.1.0"
description = "Local Agno agent for scaffolding Flink e2e demos"
requires-python = ">=3.11"
dependencies = [
    "agno>=2.0.0",
    "ollama>=0.3.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "sqlalchemy>=2.0.50",
    "jump-start-tools",
]

[tool.uv.sources]
jump-start-tools = { path = "../tools", editable = true }

[project.scripts]
jump-start-agent = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jump_start_agent"]
