[project]
name = "jump-start-tools"
version = "0.1.0"
description = "Scaffold Flink e2e demo foundations for flink-studies"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
jump-start = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jump_start"]
only-include = ["jump_start", "cli.py"]

[tool.pytest.ini_options]
pythonpath = ["."]
