[project]
name = "flink-sql-tools"
version = "0.1.0"
description = "Shared Confluent Cloud Flink SQL deploy utilities (confluent-sql REST API)"
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka[avro]>=2.4.0",
    "confluent-sql>=0.3.1",
    "python-dotenv>=1.0.0",
]

[project.scripts]
flink-sql-deploy = "deploy_flink_statements:main"
