[project]
name = "flink-sql-tools"
version = "0.1.0"
description = "Shared Confluent Cloud Flink SQL deploy, snapshot, and streaming query utilities (confluent-sql REST API)"
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka[avro]>=2.4.0",
    "confluent-sql>=0.3.1",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
flink-sql-deploy = "cc_deploy.deploy_flink_statements:main"
flink-sql-snapshot = "cc_deploy.run_snapshot_query:main"
flink-sql-stream = "cc_deploy.run_streaming_query:main"
flink-sql-migrate-dbt = "migrate_dml_to_dbt:main"
flink-sql-create-manifest = "cc_deploy.create_deploy_manifest:main"
flink-sql-table-cleanup = "cc_deploy.table_cleanup:main"

[tool.pytest.ini_options]
pythonpath = ["."]
