[project]
name = "tx-scoring"
version = "0.1.0"
description = "Transaction Scoring Service - ML-based fraud detection scoring for card transactions"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
