[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claimdb-api"
version = "0.1.0"
description = "FastAPI service for claims database external lookup demo"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Jerome Boyer", email = ""},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "pydantic==2.5.0",
    "psycopg2-binary==2.9.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "httpx>=0.25.1",
    "pytest-asyncio>=0.21.1",
]

[project.urls]
Homepage = "https://github.com/jbcodeforce/flink-studies/e2e-demos/external-lookup-demo"
Repository = "https://github.com/jbcodeforce/flink-studies/e2e-demos/external-lookup-demo"
Documentation = "https://github.com/jbcodeforce/flink-studies/e2e-demos/external-lookup-demo/blob/main/README.md"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/claimdb_api",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]