[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claim-event-generator"
version = "0.1.0"
description = "Kafka claim transaction event generator for external lookup demonstration"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Jerome Boyer", email = "demo@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka",
    "pydantic",
    "pydantic-settings>=2.1.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "faker>=22.0.0",
    "avro-python3>=1.10.0",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
payment-generator = "event_generator.cli:app"

[project.urls]
Homepage = "https://github.com/jbcodeforce/flink-studies/e2e-demos/external-lookup-demo"
Repository = "https://github.com/jbcodeforce/flink-studies/e2e-demos/external-lookup-demo"
Documentation = "https://github.com/jbcodeforce/flink-studies/e2e-demos/external-lookup-demo/blob/main/README.md"

[tool.hatch.build.targets.wheel]
packages = ["src/event_generator"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["event_generator"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "confluent_kafka.*",
    "avro.*",
    "faker.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/event_generator",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
