[project]
name = "reefer-anomaly-detection-producer"
version = "0.1.0"
description = "Kafka producer for reefer-anomaly-detection demo (uses cm_py_lib)"
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka[schema-registry]>=2.3.0",
    "pydantic>=2.0.0",
    "jsonschema>=4.0.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
package = false
