[project]
name = "self-joins-music-producer"
version = "0.1.0"
description = "Avro Kafka producers for self-joins music streaming demo (uses cm_py_lib)"
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka[schema-registry]>=2.3.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
package = false
