[project]
name = "simple-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "attrs>=25.3.0",
    "authlib>=1.6.3",
    "cachetools>=6.2.0",
    "confluent-kafka>=2.11.1",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "jsonschema>=4.25.1",
    "orjson>=3.11.3",
    "pydantic>=2.11.7",
    "python-multipart>=0.0.6",
    "referencing>=0.36.2",
    "uvicorn>=0.35.0",
]
